src/route/IndexPage/Section/Landing/Landing.style.scss
$section-home-padding-block-start: 25rem;

.Landing {
    z-index: 1;
    position: relative;
    padding-inline-start: var(--content-padding);
    height: 100vh;
    display: flex;

    @include mobile {
        flex-direction: column;
        padding-inline: var(--content-padding);
    }

    &-Content {
        padding-block-start: $section-home-padding-block-start;
        flex: 0.8;

        @include mobile {
            padding-block-start: 5rem;
        }

        @include from-fhd {
            flex: 0.6;
        }

        >h1 {
            font-size: 4rem;
            font-weight: 600;
            margin-block: 0;

            @include mobile {
                font-size: 2.5rem;
            }

            >span {
                position: relative;
                font-size: 5rem;
                font-weight: 700;

                @include desktop {
                    letter-spacing: 0.4rem;
                }

                @include mobile {
                    font-size: 3.5rem;
                }

                &::after {
                    content: '';
                    position: absolute;
                    inset-block-end: 0;
                    display: block;
                    width: 100%;
                    border-block-end: 1px solid var(--color-border);
                }

                >span {
                    color: var(--color-theme);
                }
            }
        }

        >h2 {
            margin-block-start: 2rem;
            margin-block-end: 0;
            font-weight: 400;
            font-size: 3rem;

            @include mobile {
                font-size: 2.25rem;
            }

            >span {
                font-weight: 600;
                color: inherit;
            }
        }

        >p {
            margin-block-start: 1rem;
            font-size: 1.75rem;
            font-weight: 400;
            color: var(--color-content-tertiary);

            @include mobile {
                font-size: 1.25rem;
            }
        }
    }

    &-Spline {
        z-index: -1;
        inset-inline-end: 0;
        inset-block-start: 0;
        height: 100vh;
        flex: 1;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        overflow: visible;

        @include from-fhd {
            padding-inline-end: 5rem;
        }

        >canvas {
            pointer-events: none;

            @include mobile {
                width: 95% !important;
                height: auto !important;
            }
        }
    }
}

@keyframes initial {
    from {
        translate: 0 -10rem;
        scale: 0.9;
        opacity: 0;
    }

    to {
        translate: 0 0;
        scale: 1;
        opacity: 1;
    }
}

